UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/SterlingQuote__c.field-meta.xml
<CustomField>
    <fullName>SterlingQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Name</label>
    <referenceTo>SterlingQuote__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>SterlingQuoteItems</relationshipName>
    <type>Lookup</type>
</CustomField>