UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/TermLength__c.field-meta.xml
<CustomField>
    <fullName>TermLength__c</fullName>
    <label>Term Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>