UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Total_Adjust_MRC__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjust_MRC__c</fullName>
    <label>Total Adjust MRC</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>