UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Transport Cost</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>