UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/UNI_NNI_Type__c.field-meta.xml
<CustomField>
    <fullName>UNI_NNI_Type__c</fullName>
    <label>UNI/NNI Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>