UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/UpdatedMRC__c.field-meta.xml
<CustomField>
    <fullName>UpdatedMRC__c</fullName>
    <label>UpdatedMRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>