UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/UpdatedNRC__c.field-meta.xml
<CustomField>
    <fullName>UpdatedNRC__c</fullName>
    <label>UpdatedNRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>