UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/recordTypes/SFA.recordType-meta.xml
<RecordType>
    <fullName>SFA</fullName>
    <active>true</active>
    <label>SFA</label>
</RecordType>