UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/recordTypes/Sterling_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Sterling_Line_Item</fullName>
    <active>true</active>
    <label>Sterling Line Item</label>
</RecordType>