UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/validationRules/NotNull.validationRule-meta.xml
<ValidationRule>
    <fullName>NotNull</fullName>
    <active>false</active>
    <errorConditionFormula>AND( SIFT_Required__c == true,
NOT( AND( ISBLANK( SIFT_InquiryId__c )) ) )</errorConditionFormula>
    <errorDisplayField>SIFT_InquiryId__c</errorDisplayField>
    <errorMessage>Required value ....</errorMessage>
</ValidationRule>