UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AdjustedMRC__c</columns>
    <columns>OpportunityId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>