UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/listViews/BDS_CT_SterlingQuoteItem.listView-meta.xml
<ListView>
    <fullName>BDS_CT_SterlingQuoteItem</fullName>
    <filterScope>Queue</filterScope>
    <label>BDS - CT</label>
    <queue>BDS_CT</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>