UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/listViews/Engineering_CT_SterlingQuoteItem.listView-meta.xml
<ListView>
    <fullName>Engineering_CT_SterlingQuoteItem</fullName>
    <filterScope>Queue</filterScope>
    <label>Engineering - CT</label>
    <queue>Engineering_CT</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>