UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/listViews/FINANCE_CT_SterlingQuoteItem.listView-meta.xml
<ListView>
    <fullName>FINANCE_CT_SterlingQuoteItem</fullName>
    <filterScope>Queue</filterScope>
    <label>FINANCE - CT</label>
    <queue>FINANCE_CT</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>