UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/listViews/ICB_CTR_Finance_SterlingQuoteItem.listView-meta.xml
<ListView>
    <fullName>ICB_CTR_Finance_SterlingQuoteItem</fullName>
    <columns>SterlingQuote__c</columns>
    <columns>NAME</columns>
    <columns>AdjustedMRC__c</columns>
    <columns>CPQLineNumber__c</columns>
    <columns>CurrentStatus__c</columns>
    <columns>DSAT_AddressID__c</columns>
    <columns>DiscountType__c</columns>
    <columns>ICB_Comments__c</columns>
    <columns>ICB_Request__c</columns>
    <columns>Overall_Quote_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>ICB CTR Finance</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>