UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/listViews/ICB_CTR_Pricing_SterlingQuoteItem.listView-meta.xml
<ListView>
    <fullName>ICB_CTR_Pricing_SterlingQuoteItem</fullName>
    <filterScope>Queue</filterScope>
    <label>ICB CTR Pricing</label>
    <queue>ICB_CTR_Pricing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>