UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/listViews/ICB_Pending_Final.listView-meta.xml
<ListView>
    <fullName>ICB_Pending_Final</fullName>
    <columns>SterlingQuote__c</columns>
    <columns>NAME</columns>
    <columns>AdjustedMRC__c</columns>
    <columns>CPQLineNumber__c</columns>
    <columns>CurrentStatus__c</columns>
    <columns>DSAT_AddressID__c</columns>
    <columns>DiscountType__c</columns>
    <columns>ICB_Comments__c</columns>
    <columns>Overall_Quote_Status__c</columns>
    <columns>OverallStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CurrentStatus__c</field>
        <operation>equals</operation>
        <value>Pending Final Update</value>
    </filters>
    <label>ICB Pending Final</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>