UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/listViews/Ready_For_Review_East_SterlingQuoteItem.listView-meta.xml
<ListView>
    <fullName>Ready_For_Review_East_SterlingQuoteItem</fullName>
    <filterScope>Queue</filterScope>
    <label>Ready For Review East</label>
    <queue>Ready_For_Review_East</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>