UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/listViews/RP_Review_Central_SterlingQuoteItem.listView-meta.xml
<ListView>
    <fullName>RP_Review_Central_SterlingQuoteItem</fullName>
    <filterScope>Queue</filterScope>
    <label>RP Review Central</label>
    <queue>RP_Review_Central</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>